[package]
name = "treelight"
version = "0.3.1"
authors = ["Edgar <git@edgarluque.com>"]
edition = "2018"
description = "A syntax highlighter for the web using tree-sitter."
readme = "README.md"
documentation = "https://docs.rs/treelight"
repository = "https://github.com/edg-l/treelight"
license = "MIT"
keywords = ["tree-sitter", "highlight", "syntax", "web", "highlighting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include  = [
	"/languages/tree-sitter-*/grammar.js",
	"/languages/tree-sitter-*/queries",
	"/languages/tree-sitter-*/src",
	"/languages/tree-sitter-typescript/typescript/grammar.js",
	"/languages/tree-sitter-typescript/typescript/src",
	"/languages/tree-sitter-typescript/tsx/grammar.js",
	"/languages/tree-sitter-typescript/tsx/src",
	"/languages/tree-sitter-typescript/common",
	"/src"
]

[dependencies]
v_htmlescape = "0.15.8"
tree-sitter = "0.20.9"
tree-sitter-highlight = "0.20.1"

[build-dependencies]
cc = "1.0.73"
